tests/samples/negative/pattern_matching/match_integer_pattern_overflow.ax
module match_integer_pattern_overflow;

fn main() -> i32 {
  let value: u8 = 0;
  return match value {
    256 => 1,
    _ => 2,
  };
}
